# agent-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
agent_manager/: __init__.py  agent_manager.py
agent_manager/cli_extensions/: __init__.py  agent_commands.py  config_commands.py  merger_commands.py  repo_commands.py
agent_manager/config/: __init__.py  config.py
agent_manager/core/: __init__.py  agents.py  merger_registry.py  mergers.py  repos.py
agent_manager/output/: __init__.py  output.py
agent_manager/plugins/: __init__.py
agent_manager/plugins/agents/: __init__.py  agent.py  test_agent.py
agent_manager/plugins/mergers/: __init__.py  abstract_merger.py  copy_merger.py  dict_merger.py  json_merger.py  markdown_merger.py  text_merger.py  yaml_merger.py
agent_manager/plugins/repos/: __init__.py  abstract_repo.py  git_repo.py  local_repo.py
agent_manager/utils/: __init__.py  discovery.py  url.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CUSTOM_AGENTS.md  CUSTOM_MERGERS.md  CUSTOM_REPOS.md  GETTING_STARTED.md  HOOKS.md  README.md  REFACTORING_NOTES.md  STRATEGIES.md  TOX_SETUP_SUMMARY.md  TOX_USAGE.md  TROUBLESHOOTING.md
tests/: README.md  __init__.py  test_agent_manager.py
tests/cli_extensions/: test_agent_commands.py  test_config_commands.py  test_merger_commands.py  test_repo_commands.py
tests/config/: test_config.py
tests/core/: test_agents.py  test_merger_registry.py  test_mergers.py  test_repos.py
tests/data/: README.md
tests/data/org/.otherapp/: config.txt  settings.yaml
tests/data/org/.testagent/: .cursorrules  README.md  mcp.json  settings.yaml
tests/data/personal/.testagent/: .cursorrules  mcp.json  notes.txt  settings.yaml
tests/data/team/.testagent/: .cursorrules  guidelines.md  mcp.json  settings.yaml
tests/output/: test_output.py
tests/plugins/agents/: test_agent.py
tests/plugins/mergers/: __init__.py  test_abstract_merger.py  test_copy_merger.py  test_dict_merger.py  test_json_merger.py  test_markdown_merger.py  test_text_merger.py  test_yaml_merger.py
tests/plugins/repos/: test_abstract_repo.py  test_git_repo.py  test_local_repo.py
tests/utils/: test_discovery.py  test_url.py
